# SlicerWorkflowExt

./: .gitignore  DAI_Workflow.b64  LEFT_PANEL_MANAGEMENT.md  README.md  start.ps1  test_workflow.py  workflow.py  workflow2.py
DAI_Workflow/: CMakeLists.txt  DICOM_Header_Enhancement_Summary.md  DICOM_Spacing_Enhancement.md  Enhanced_DICOM_Loading_Reference.md  SourceFileMethod.md  ViewConfigurationChanges.md
DAI_Workflow/workflow/: workflow.py
DAI_Workflow/workflow/Moduals/: workflow_moduals.py  workflow_test_functions.py
DAI_Workflow/workflow/Resources/UI/: workflow.ui
